assets/css/core.css
html {
  overflow-y: scroll;
}

body {
  font-family: "Source Sans Pro", sans-serif;
  color: #d8d8d8;
  font-size: 30px;
  background-image: url("/assets/img/tile.png");
  margin: 0;
}

.hidden {
  display: none !important;
}

img {
  max-width: 100%;
}

.header-container {
  width: 50%;
  margin: auto;
}

.div-links-container {
  display: flex;
  flex-direction: column;
  text-align: left;
  padding-bottom: 30px;
  max-width: 100%;
  margin: auto;
  margin-left: 25%;
}

@media (max-width: 800px) {
  .div-links-container {
    margin-left: 10%;
  }
}

.div-links {
  text-align: left;
  padding-bottom: 30px;
  display: flex;
  flex-direction: column;
  overflow-x: hidden;
}

.header {
  font-weight: 300;
  font-size: 7vh;
  margin-top: 30%;
}

.face {
  display: block;
  margin-left: 10%;
  margin-right: 10%;
  image-orientation: from-image;
  -webkit-box-shadow: -14px 21px 28px -2px rgba(135, 135, 135, 0.34);
  -moz-box-shadow: -14px 21px 28px -2px rgba(135, 135, 135, 0.34);
  box-shadow: -14px 21px 28px -2px rgba(135, 135, 135, 0.34);
  width: min(400px, 85%);
  height: auto;
}

a,
button {
  font-family: "Source Sans Pro", sans-serif;
  background: none;
  border: none;
  font-size: 38px;
  text-decoration: none;
  color: darkorange;
  cursor: pointer;
  padding: 0;
  text-align: left;
  width: max-content;
}

button:disabled {
  color: #d8d8d8;
  cursor: default;
}

button:disabled:hover {
  text-decoration: none;
}

a:hover,
button:hover,
a:focus-visible,
button:focus-visible,
.underline {
  text-decoration: underline;
  outline-offset: 0;
  outline: none;
}

.sub {
  font-size: 32px;
  padding-left: 32px;
}

.button-reachout-send {
  text-align: right;
  font-size: 32px;
}

textarea:focus {
  outline: none;
}

.bottom-padding {
  margin-bottom: 30%;
}

.about {
  width: 50%;
  margin: auto;
}

@media (max-width: 800px) {
  .about {
    width: 75%;
  }
}

.reachout {
  text-align: right;
  display: block;
  padding-bottom: 30px;
  max-width: min(400px, 75%);
}

.reachout-send-results {
  max-width: fit-content;
  display: block;
  text-align: left;
}

.textarea-reachout {
  width: 100%;
  height: 150px;
  border: 2px solid #d8d8d8;
  color: #d8d8d8;
  resize: none;
  margin-bottom: 10px;
  font-size: 32px;
  font-family: "Source Sans Pro", sans-serif;
  padding: 8px;
  background-color: transparent;
}

.arrow,
.load-spin {
  display: none;
  text-decoration: none;
  height: 32px;
  width: 32px;
  color: darkorange;
}

.load-spin {
  display: block;
  animation: rotation 2s infinite linear;
  margin-top: 20px;
  margin-bottom: 20px;
}

.load-spin-send {
  float: right;
}

@keyframes rotation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(359deg);
  }
}

